--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <script src="jquery-3.5.1.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.scss" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&display=swap" rel="stylesheet">
     <script src="index.js"></script> 
